k8s/services/order-service/homol/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-service-homol
  labels:
    app: order-service-homol
    environment: homol
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /homol(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service-homol
                port:
                  number: 8080
